--- a/Makefile.target
+++ b/Makefile.target
@@ -282,6 +282,7 @@ $(call end-emulator-library)
 
 ## another for 64-bit, see note in file Makefile.common emulator64-common
 ifneq ($(filter linux darwin,$(HOST_OS)),)
+ ifneq ($(HOST_BITS),32)
   ifneq ($(BUILD_STANDALONE_EMULATOR),true)
     $(call start-emulator-library, emulator64-target-$(EMULATOR_TARGET_CPU))
     LOCAL_CFLAGS += $(common_LOCAL_CFLAGS) -m64
@@ -290,6 +291,7 @@ ifneq ($(filter linux darwin,$(HOST_OS)),)
     $(call gen-hx-header,qemu-options.hx,qemu-options.def,os-posix.c os-win32.c)
     $(call end-emulator-library)
   endif # BUILD_STANDALONE_EMULATOR == nil
+ endif # HOST_BITS != 32
 endif # HOST_OS == linux || darwin
 
 
@@ -476,6 +478,7 @@ $(call end-emulator-program)
 
 ## another for 64-bit, see note in file Makefile.common emulator64-common
 ifneq ($(filter linux darwin,$(HOST_OS)),)
+ ifneq ($(HOST_BITS),32)
   ifneq ($(BUILD_STANDALONE_EMULATOR),true)
     $(call start-emulator-program, emulator64-$(EMULATOR_TARGET_ARCH))
     LOCAL_STATIC_LIBRARIES += \
@@ -494,5 +497,6 @@ ifneq ($(filter linux darwin,$(HOST_OS)),)
     $(call gen-hw-config-defs)
     $(call end-emulator-program)
   endif # BUILD_STANDALONE_EMULATOR == nil
+ endif # HOST_BITS != 32
 endif # HOST_OS == linux || darwin
 
